...
        initialRouteName="CampusMap"
        screenOptions={globalStyles.screenOptions}
      >
        <Tabs.Screen
          name="CampusMap"
          options={{
            title: "Campus Map",
            headerShown: false,
            tabBarIcon: CampusMapIcon,
          }}
        />
        <Tabs.Screen
          name="ClassSchedule"
...
