...
  };
}


export const SHUTTLE_STOPS = {
  SGW: {
    name: 'SGW Campus Shuttle Stop',
    address: 'Hall Building, 1455 De Maisonneuve Blvd. W.',
    latitude: 45.4972,
    longitude: -73.5789
  },
  LOYOLA: {
    name: 'Loyola Campus Shuttle Stop',
    address: 'Loyola Chapel, 7137 Sherbrooke St. W.',
    latitude: 45.4581,
    longitude: -73.6405
  }
};

...
